# blurgtext

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  README.md  build-nuget.sh
.github/workflows/: dev-builds.yml
demo/: CMakeLists.txt  main.c
demo/glad/include/glad/: glad.h
demo/glad/src/: glad.c
dotnet/: BlurgText.sln
dotnet/BlurgSample/: BlurgSample.csproj  Program.cs
dotnet/BlurgSample/Renderer/: Render2D.cs  Shader.cs  Texture.cs
dotnet/BlurgText/: Blurg.cs  BlurgAlignment.cs  BlurgColor.cs  BlurgCursor.cs  BlurgFont.cs  BlurgFormattedText.cs  BlurgNative.cs  BlurgRect.cs  BlurgResult.cs  BlurgShadow.cs  BlurgStyleSpan.cs  BlurgText.csproj  BlurgUnderline.cs  FontWeight.cs  README.md  UTF8ZHelper.cs
include/: blurgtext.h
src/: blurgtext.c  blurgtext_internal.h  font.c  fontmanager.c  glyphatlas.c  list.h  sysfonts_directwrite.cpp  sysfonts_fontconfig.c  util.c  util.h
toolchains/: mingw-w64-i686.cmake  mingw-w64-x86_64.cmake
